# noir-cfg-rec

./: Nargo.toml  README.md  array_lookup_times.csv  avg_time_output.py  cleanup.sh  compile_results.py  generate_arr_benchmark_inp.py  generate_benchmark_str.py  generate_dfs_benchmark_str.py  generate_dfs_rec_benchmark_str.py  generate_labelled_p_tree.py  pedersen_com.py  preprocess_vks_dfs.sh  run_benchmark.sh  run_benchmark_arr_size.sh  run_benchmark_hashes.sh  run_breakdown_benches.sh  run_dfs_parsing_benches.sh  run_parsing_benches.sh  setup_vks.sh  setup_vks_dfs_prep.sh  setup_vks_dfs_rec.sh  sha_com.py  test_hash.sh  time_rec_proof.txt
base_dfs_parsing_no_mt/: Nargo.toml  test.sh
base_parsing_circuit/: Nargo.toml  Prover.toml  Verifier.toml  test.sh
base_parsing_circuit_no_labels/: Nargo.toml  test.sh
base_parsing_circuit_no_labels_no_mt/: Nargo.toml  test.sh
base_rec_parsing_circuit/: Nargo.toml  Prover copy.toml  Prover.toml  Verifier.toml  prods  test.sh
dfs_stack_base/: Nargo.toml  Prover.toml  Verifier.toml  test.sh
dfs_stack_full_rec/: Nargo.toml  Prover.toml  Verifier.toml  test.sh
dfs_stack_rec_1/: Nargo.toml  Prover.toml  test.sh
final_proof/: proof
hash_checks/: Nargo.toml  Prover.toml  Verifier.toml  proof  test.sh
main_files/: base_main.nr  base_rec_main.nr  dfs_stack_base_main.nr  dfs_stack_base_main_HC.nr  dfs_stack_base_main_MT.nr  dfs_stack_base_main_opt.nr  dfs_stack_full_rec_main.nr  dfs_stack_full_rec_main_opt.nr  no_labels_base_main.nr  (+5 more)
test_poseidon/: Cargo.toml  pyvenv.cfg
test_poseidon/src/: lib.rs  main.rs  test_file.rs
(+71 files in other folders)
